--- a/app/views/inventory/notes/_form.html.erb
+++ b/app/views/inventory/notes/_form.html.erb
@@ -7,6 +7,11 @@
   </div>
 
   <div class="form-group mb-4">
+    <%= f.text_field :all_tags, class: 'form-control form-control-sm', placeholder: "Tags separated with commas" %>
+  </div>
+
+
+  <div class="form-group mb-4">
     <%# f.label :content %>
     <%= f.text_area :content, size: "30x20", id: 'note-content' %>
   </div>
