Setup tags and taggings creation

--- a/app/views/inventory/notes/_form.html.erb
+++ b/app/views/inventory/notes/_form.html.erb
@@ -7,9 +7,8 @@
   </div>
 
   <div class="form-group mb-4">
-    <%= f.text_field :all_tags, class: 'form-control form-control-sm', placeholder: "Tags separated with commas" %>
+    <%= f.text_field :tag_list, class: 'form-control' %>
   </div>
-
 
   <div class="form-group mb-4">
     <%# f.label :content %>
