--- a/app/views/notes/_notes_list_wiki.html.erb
+++ b/app/views/notes/_notes_list_wiki.html.erb
@@ -1,17 +1,17 @@
-<table id="inventory_notes-table" class="ui very basic table mb-0">
+<table id="notes-table" class="ui very basic table mb-0">
   <thead>
     <tr>
     </tr>
   </thead>
   <tbody>
-    <% inventory_notes.each do |item| %>
+    <% notes.each do |item| %>
       <tr>
         <td class="pt-0 pb-1 px-0 border-0">
           <% if item.favorite %>
             <i class="fa fa-star text-warning fa-fw mr-1" style="margin-left: -26px;"></i>
           <% end %>
           <%= link_to "#{item.title}".html_safe,
-                inventory_note_path(item.guid),
+                note_path(item.guid),
                 class: 'note-child-item link-purple',
                 data: { turbolinks: false }
                 %>
@@ -25,7 +25,7 @@
           </div>
         </td>
         <% link_to '<i class="pencil icon"></i>'.html_safe,
-                    edit_inventory_note_path(item),
+                    edit_note_path(item),
                     class: "ui icon mini yellow button",
                     data: { turbolinks: false }
                     %>
