--- a/app/views/search/_search_widget.html.erb
+++ b/app/views/search/_search_widget.html.erb
@@ -14,7 +14,7 @@
               <input type="text"
                     name="search"
                     id="search"
-                    placeholder="Search <%= current_user.inventory_notes.size %> inventory notes stored in the DB"
+                    placeholder="Search <%= current_user.notes.size %> inventory notes stored in the DB"
                     class="form-control search-input"
                     autocomplete="off"
                     autofocus="autofocus"
