--- a/app/views/notes/_notes_list.html.erb
+++ b/app/views/notes/_notes_list.html.erb
@@ -1,11 +1,11 @@
 <div class="card border rounded-lg shadow-sm px-5 py-4">
-  <table id="inventory_notes-table" class="ui very basic table mb-0">
+  <table id="notes-table" class="ui very basic table mb-0">
     <thead>
       <tr>
       </tr>
     </thead>
     <tbody>
-      <% inventory_notes.each do |item| %>
+      <% notes.each do |item| %>
         <tr>
           <td class="px-0">
             <% if item.favorite %>
@@ -13,7 +13,7 @@
             <% else %>
             <% end %>
             <%= link_to item.title,
-                  inventory_note_path(item.guid),
+                  note_path(item.guid),
                   class: 'note-item link-purple mr-3',
                   data: { turbolinks: false }
                   %>
@@ -33,7 +33,7 @@
             <%= "#{distance_of_time_in_words(Time.now, item.updated_at)}" %>
           </td>
             <% link_to '<i class="pencil icon"></i>'.html_safe,
-                        edit_inventory_note_path(item),
+                        edit_note_path(item),
                         class: "ui icon mini yellow button",
                         data: { turbolinks: false }
                         %>
