--- a/app/views/notes/_search.html.erb
+++ b/app/views/notes/_search.html.erb
@@ -1,14 +1,14 @@
-<%= form_tag inventory_notes_path, method: "get", class: ""  do %>
+<%= form_tag notes_path, method: "get", class: ""  do %>
     <%# text_field_tag :search,
         params[:search],
-        placeholder: "Search #{@total_inventory_notes} inventory notes stored in the DB",
+        placeholder: "Search #{@total_notes} inventory notes stored in the DB",
         type: "text",
         class: 'form-control' %>
     <div class="input-group">
       <input type="text"
              name="search"
              id="search"
-             placeholder="Search <%= current_user.inventory_notes.size %> inventory notes stored in the DB"
+             placeholder="Search <%= current_user.notes.size %> inventory notes stored in the DB"
              class="form-control">
       <div class="input-group-append">
         <button class="btn btn-sm btn-light" type="submit">
