--- a/app/views/notes/_filter_search_widget.html.erb
+++ b/app/views/notes/_filter_search_widget.html.erb
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="row">
       <div class="col-md-12 col-lg-8 mb-2 mb-lg-0">
-        <%= render partial: 'inventory/notes/search' %>
+        <%= render partial: 'notes/search' %>
       </div>
       <div class="col-md-12 col-lg-4">
         <%= select_tag "category",
