--- a/app/views/notes/_notes_list.html.erb
+++ b/app/views/notes/_notes_list.html.erb
@@ -27,6 +27,7 @@
                     data: { turbolinks: false }
                     %>
               <% end %>
+              <%= tag_links(item) %>
             </div>
           </td>
           <td class="text-right pr-0">
