--- a/app/views/tags/_delete_modal.html.erb
+++ b/app/views/tags/_delete_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade text-left" id="delete-<%= tag.id %>" role="dialog">
+<div class="modal fade text-left" id="delete-<%= tag.name %>" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
