--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -51,7 +51,7 @@
 
   <hr class="sidebar-hr"/>
   <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-3">
-    <span>PROJECTS</span>
+    <%= link_to 'PROJECTS'.html_safe, category_path(current_user.categories.find_by(title: 'Projects')), class: 'd-flex align-items-center link-purple-white', data: { turbolinks: false } %>
     <i class="fa fa-briefcase"></i>
   </h6>
   <% if user_signed_in? %>
