--- a/app/views/tags/_add_modal.html.erb
+++ b/app/views/tags/_add_modal.html.erb
@@ -1,11 +1,11 @@
-<div class="modal fade text-left" id="edit-<%= tag.name %>" role="dialog">
+<div class="modal fade text-left" id="add-tag" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">Edit a tag</button>
+        <button type="button" class="close" data-dismiss="modal">Add a tag</button>
       </div>
       <div class="modal-body">
-        <%= form_for(tag, url: tag_path(tag.name), html: { class: "form "} ) do |f| %>
+        <%= form_for(@tag, html: { class: "form "} ) do |f| %>
           <%= render 'layouts/error_messages', object: f.object %>
 
           <div class="form-group">
