--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,9 @@
           <div class="dropdown-menu shadow nav-item pt-3 pb-2 text-center text-lg-left" aria-labelledby="navbarDropdown">
             <%= link_to 'Profile Settings', edit_user_registration_path,
               class: 'dropdown-item', data: { turbolinks: false } %>
-            <%= link_to 'Download data', download_export_zip_path,
+            <%= link_to 'Import notes', import_zip_path,
+              class: 'dropdown-item', data: { turbolinks: false } %>
+            <%= link_to 'Export notes', download_export_zip_path,
               class: 'dropdown-item', data: { turbolinks: false } %>
             <hr class="my-2" />
             <%= link_to 'Help', pages_help_path,
