--- a/app/views/imports/wizard.html.erb
+++ b/app/views/imports/wizard.html.erb
@@ -10,5 +10,24 @@
 <br>
 
 <div class="card shadow-sm bordered p-4">
-  Import data from external sources
+  <%= form_with(url: import_zip_path, multipart: true, html: {class: "form"}) do |form| %>
+    <div class="form-group">
+      <div class="input-group">
+        <div class="custom-file">
+          <%= form.file_field 'zip_file', class: "custom-file-input", accept: 'application/zip' %>
+          <%= form.label '', nil, class: "custom-file-label" %>
+        </div>
+        <div class="input-group-append">
+          <%= submit_tag("Upload", class: "btn btn-sm btn-purple") %>
+        </div>
+        <br>
+
+      </div>
+      <div id="emailHelp" class="form-text text-muted text-center">
+        <em>Import your zip file and add your notes to wreeto.</em>
+      </div>
+
+    </div>
+  <% end %>
+
 </div>
