--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="ui grid">
   <div class="eight wide column">
-    <h3>Edit Category</h3>
-  </div>
-  <div class="right aligned eight wide column">
-
+    <% if @category.is_a_project? %>
+      <h3>Edit Project</h3>
+    <% else %>
+      <h3>Edit Category</h3>
+    <% end %>
   </div>
 </div>
 <hr/>
-<br>
 
 <div class="card shadow-sm bordered p-4">
   <%= render 'form', item: @item %>
