--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -51,8 +51,7 @@
 
   <hr class="sidebar-hr"/>
   <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-3">
-    <%# link_to 'PROJECTS'.html_safe, category_path(current_user.categories.find_by(title: 'Projects')), class: 'd-flex align-items-center link-purple-white', data: { turbolinks: false } %>
-    PROJECTS
+    <%= link_to 'PROJECTS'.html_safe, category_path(current_user.categories.find_by(slug: 'projects')), class: 'd-flex align-items-center link-purple-white', data: { turbolinks: false } %>
     <i class="fa fa-briefcase"></i>
   </h6>
   <% if user_signed_in? %>
@@ -60,7 +59,7 @@
       <ul class="nav flex-column mb-2">
         <% current_user.categories.projects.active.ordered_by_title.each do |category| %>
           <li class="nav-item">
-            <%= link_to "#{truncate(category.title, length: 30)}".html_safe, category, class: 'nav-link link-purple', data: { turbolinks: false } %>
+            <%= link_to "#{truncate(category.title, length: 30)}".html_safe, category_path(category.slug), class: 'nav-link link-purple', data: { turbolinks: false } %>
           </li>
         <% end %>
       </ul>
