--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -21,7 +21,7 @@
 <div class="row">
   <div class="d-none d-md-block col-md-6">
     <h5>
-      <%= link_to @note.category.title, @note.category,
+      <%= link_to @note.category.title, category_path(@note.category.slug),
           class: "badge badge-purple-outline", data: { turbolinks: false } %>
       <%= tag_links(@note) %>
     </h5>
