--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,11 +6,9 @@
     <%= add_category_button %>
   </div>
 </div>
-
 <hr/>
-<br>
 
-<div class="card border rounded-lg shadow-sm p-5">
+<div class="card border rounded-lg shadow-sm px-5 py-4">
   <table class="table">
     <thead>
     </thead>
