--- a/app/views/notes/_notes_list_projects.html.erb
+++ b/app/views/notes/_notes_list_projects.html.erb
@@ -1,6 +1,9 @@
 <div class="card rounded-lg pr-4 py-0 mb-2 <%= project.active? ? 'border-left-active' : 'border-left-inactive' %>">
   <div class="card-body">
-    <h5 class="card-title"><%= link_to project.title, category_path(project.slug), class: "link-purple", data: { turbolinks: false } %></h5>
+    <h5 class="card-title">
+      <%= link_to project.title, category_path(project.slug), class: "link-purple", data: { turbolinks: false } %>
+      <span class="float-right"><i class="fa fa-ellipsis-h text-muted"></i></span>
+    </h5>
     <h6 class="card-subtitle mb-0 text-muted"><small><%= project.description %></small></h6>
     <hr/>
     <div class="pr-4">
@@ -26,10 +29,10 @@
                   <% if item.is_public? %>
                     <span class='badge badge-success prl-2'><i class="fa fa-globe text-white fa-fw"></i> Public</span>
                   <% end %>
-                  <%= tag_links(item) %>
+                  <%# tag_links(item) %>
                 </div>
               </td>
-              <td class="text-right py-1">
+              <td class="text-right pr-0 py-1">
                 <%= "#{distance_of_time_in_words(Time.now, item.updated_at)}" %>
               </td>
             </tr>
