Fix an issue with missing parent in new project creation

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -15,7 +15,9 @@
     </div>
   <% end %>
 
-  <% unless @category.parent && @category.parent.projects? %>
+  <% if @category.parent && @category.parent.projects? %>
+    <%= f.hidden_field :parent_id, value: @category.parent.id %>
+  <% else %>
     <div class="form-group">
       <%= f.label :parent_id %>
       <%= f.collection_select :parent_id,
