--- a/app/views/notes/_notes_list_projects.html.erb
+++ b/app/views/notes/_notes_list_projects.html.erb
@@ -2,45 +2,51 @@
   <div class="card-body">
     <h5 class="card-title">
       <%= link_to project.title, category_path(project.slug), class: "link-purple", data: { turbolinks: false } %>
-      <span class="float-right"><i class="fa fa-ellipsis-h text-muted"></i></span>
+      <!--<span class="float-right"><i class="fa fa-ellipsis-h text-muted"></i></span>-->
     </h5>
     <h6 class="card-subtitle mb-0 text-muted"><small><%= project.description %></small></h6>
     <hr/>
-    <div class="pr-4">
-      <table id="notes-table" class="ui very basic table mb-0 ml-4">
-        <thead>
-          <tr>
-          </tr>
-        </thead>
-        <tbody>
-          <% notes.each do |item| %>
+    <% if notes.any? %>
+      <div class="pr-4">
+        <table id="notes-table" class="ui very basic table mb-0 ml-4">
+          <thead>
             <tr>
-              <td class="px-0 py-1">
-                <% if item.favorite %>
-                  <i class="fa fa-star text-warning fa-fw mr-1" style="margin-left: -26px;"></i>
-                <% else %>
-                <% end %>
-                <%= link_to item.title,
-                      note_path(item.guid),
-                      class: 'note-item link-purple mr-3',
-                      data: { turbolinks: false }
-                      %>
-                <div class="col-md-12 pl-0 ml-0">
-                  <% if item.is_public? %>
-                    <span class='badge badge-success prl-2'><i class="fa fa-globe text-white fa-fw"></i> Public</span>
-                  <% end %>
-                  <%# tag_links(item) %>
-                </div>
-              </td>
-              <td class="text-right pr-0 py-1">
-                <%= "#{distance_of_time_in_words(Time.now, item.updated_at)}" %>
-              </td>
             </tr>
-          <% end %>
-        </tbody>
-        <tfoot>
-        </tfoot>
-      </table>
-    </div>
+          </thead>
+          <tbody>
+            <% notes.each do |item| %>
+              <tr>
+                <td class="px-0 py-1">
+                  <% if item.favorite %>
+                    <i class="fa fa-star text-warning fa-fw mr-1" style="margin-left: -26px;"></i>
+                  <% else %>
+                  <% end %>
+                  <%= link_to item.title,
+                        note_path(item.guid),
+                        class: 'note-item link-purple mr-3',
+                        data: { turbolinks: false }
+                        %>
+                  <div class="col-md-12 pl-0 ml-0">
+                    <% if item.is_public? %>
+                      <span class='badge badge-success prl-2'><i class="fa fa-globe text-white fa-fw"></i> Public</span>
+                    <% end %>
+                    <%# tag_links(item) %>
+                  </div>
+                </td>
+                <td class="text-right pr-0 py-1">
+                  <%= "#{distance_of_time_in_words(Time.now, item.updated_at)}" %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+          <tfoot>
+          </tfoot>
+        </table>
+      </div>
+    <% else %>
+      <div class="pl-4 text-muted font-italic">
+        No notes here yet
+      </div>
+    <% end %>
   </div>
 </div>
